--- a/public/index.html
+++ b/public/index.html
@@ -37,33 +37,40 @@
 		</div>
 
 		<!-- Shoepair LIST -->
+		<h2 class="text-center">Existing shoes (delete by checking an item)</h2>
 		<div id="shoepair-list" class="row">
 			<div class="col-sm-4 col-sm-offset-4">
 
 				<!-- LOOP OVER THE SHOEPAIRS IN $scope.shoepairs -->
 				<div class="checkbox" ng-repeat="shoepair in shoepairs">
 					<label>
-						<input type="checkbox" ng-click="deleteShoepair(shoepair._id)"> {{ shoepair.name }}
+						<input type="checkbox" ng-click="deleteShoepair(shoepair._id)"
+							ng-confirm-click="Are you certain you want to delete this pair of shoes?">
+							{{ shoepair.name }}, in use since
+							{{shoepair.acquisitionDate}},
+							{{shoepair.kilometresRun}} km
 					</label>
 				</div>
-
-<!--
-				<p class="text-center" ng-show="loading">
-					<span class="fa fa-spinner fa-spin fa-3x"></span>
-				</p>
--->
 			</div>
 		</div>
 
+
+		<h2 class="text-center">Add a new pair of shoes</h2>
 		<!-- FORM TO CREATE SHOEPAIRS -->
 		<div id="shoepair-form" class="row">
 			<div class="col-sm-8 col-sm-offset-2 text-center">
 				<form>
 					<div class="form-group">
-
 						<!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-						<input type="text" class="form-control input-lg text-center" placeholder="Name" ng-model="formData.name">
-
+						<input type="text" class="form-control input-lg text-center"
+							placeholder="Name" ng-model="formData.name">
+						<input type="text" class="form-control input-lg text-center"
+							placeholder="Description" ng-model="formData.description">
+						<!-- TODO: Replace this with a date picker etc.-->
+						<input type="number" class="form-control input-lg text-center"
+							placeholder="Acquisition year" ng-model="formData.acquisitionDate" min="2000">
+						<input type="number" class="form-control input-lg text-center"
+							placeholder="Kilometres run" ng-model="formData.kilometresRun" min=0 >
 					</div>
 
 					<!-- createShoepair() WILL CREATE NEW SHOEPAIRS -->
